first full pass at Lecture 5.1

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -425,7 +425,7 @@ This is an impressively broad theorem: the loopspaces $\OS{MU}{2*}$ are quite co
 
 
 
-\section{Dieudonn\'e modules}
+\section{Dieudonn\'e modules}\label{SectionDieudonneModules}
 
 Our goal today is strictly algebraic.  Because the category of finite type Hopf algebras over a ground field $k$ is an abelian category, it admits a presentation as the module category for some (possibly noncommutative) ring.  The description of this ring and of the explicit assignment from a group scheme to linear algebraic data is the subject of \textit{Dieudonn\'e theory}.  We will give a survey of some of the results of Dieudonn\'e theory today, including three different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of the results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry, which we'll explore almost none of.}
 
