sort out some of Lecture 5.2

--- a/main.bib
+++ b/main.bib
@@ -832,3 +832,21 @@ MRREVIEWER = {W. Stephen Wilson},
   MRNUMBER = {655040 (83j:55005)},
 MRREVIEWER = {Franklin P. Peterson},
 }
+
+@article {Yagita,
+    AUTHOR = {Yagita, Nobuaki},
+     TITLE = {On the {S}teenrod algebra of {M}orava {$K$}-theory},
+   JOURNAL = {J. London Math. Soc. (2)},
+  FJOURNAL = {The Journal of the London Mathematical Society. Second Series},
+    VOLUME = {22},
+      YEAR = {1980},
+    NUMBER = {3},
+     PAGES = {423--438},
+      ISSN = {0024-6107},
+     CODEN = {JLMSAK},
+   MRCLASS = {55S25},
+  MRNUMBER = {596321},
+MRREVIEWER = {W. Stephen Wilson},
+       DOI = {10.1112/jlms/s2-22.3.423},
+       URL = {http://dx.doi.org/10.1112/jlms/s2-22.3.423},
+}
