--- a/sigma.tex
+++ b/sigma.tex
@@ -153,7 +153,11 @@ is isomorphic to the affine scheme $\Spec E_0 MU$.  Moreover, the $E_0$--points 
 \end{theorem}
 
 \begin{remark}
-The map $BU \to BU \times \Z$ induces a map $MU \to MUP$, and hence 
+The map $BU \to BU \times \Z$ induces a map $MU \to MUP$.  The induced map on schemes is normalization:\todo{Justify this.}
+\begin{align*}
+\Spec E_0 MUP & \to \Spec E_0 MU, \\
+f & \mapsto \frac{f'(0)}{f}.
+\end{align*}
 \end{remark}
 
 These two Thom spectra are the beginning of a larger pattern.  Their base spaces $BU \times \Z$ and $BU$ are both infinite loopspaces: they are $\OS{kU}{0}$ and $\OS{kU}{2}$ respectively, where $kU$ is the connective complex $K$--theory spectrum.  In general, the space $\OS{kU}{2k}$ is given as a connective cover: \[\OS{kU}{2k} = BU[2k, \infty),\] and so the next Thom spectrum in the sequence is $MSU$, the bordism theory of $SU$--structured manifolds.  The special unitary group $SU$ is explicit enough that these orientations can be fully understood along similar lines to what we have done so far.  Our jumping off point for that story will be, again, an extension of the splitting principle.
@@ -176,15 +180,14 @@ Ring spectrum maps $MSU \to E$ biject with trivializations of \[\ThomSheaf{(\L_1
 \begin{remark}\label{TwoCocycleConditionForBSUBundles}
 Since we used the product map \[kU^2(Y) \otimes kU^2(Y) \to kU^4(Y)\] in the course of the proof, it is also interesting to consider the product map \[kU^4(Y) \otimes kU^0(Y) \to kU^4(Y).\]  Taking one of our splitting summands $(\L_1 - 1)(\L_2 - 1)$ and acting by some line bundle $\sheaf H$ gives
 \begin{align*}
-(\L_1-1)\sheaf H(\L_2 - 1) & = (\L_1-1)(\sheaf H \L_2 - \sheaf H)
-& = (\L_1 - 1)(\sheaf H \L_2 - 1) - (\L_1 - 1)(\sheaf H - 1) \\
-(\sheaf H \L_1 - \sheaf H)(\L_2 - 1) & = \\
+(\L_1-1)\sheaf H(\L_2 - 1) & = \\
+(\sheaf H \L_1 - \sheaf H)(\L_2 - 1) & = (\L_1-1)(\sheaf H \L_2 - \sheaf H) \\
 (\sheaf H \L_1 - 1)(\L_2 - 1) - (\sheaf H - 1)(\L_2 - 1) & = (\L_1 - 1)(\sheaf H \L_2 - 1) - (\L_1 - 1)(\sheaf H - 1).
 \end{align*}
 This ``$kU^0$--linearity'' is sometimes called a ``$2$--cocycle condition'', in reference to the similarity with the formula in \Cref{DefinitionSymmetric2Cocycle}.
 \end{remark}
 
-If we can show that $E_0 BSU$ is free as an $E_0$--module, then this will complete the $BSU$--analogue of \Cref{BUZTriumvirate,BUTriumvirate}.  This is quite easy, following directly from the Serre spectral sequence:
+If we can show that $E_* BSU$ is even--concentrated and free as an $E_0$--module, then this will complete the $BSU$--analogue of \Cref{BUZTriumvirate,BUTriumvirate}.  This is quite easy, following directly from the Serre spectral sequence:
 \begin{lemma}[{\cite[Lemma 6.1]{AndoStrickland}}]\label{BSUtoBUtoCPinftyIsSexseq}
 The Postnikov fibration \[BSU \to BU \xrightarrow{B\det} BU(1)\] induces a short exact sequence of Hopf algebras \[E^0 BSU \from E^0 BU \xleftarrow{c_1 \mapsfrom c_1} E^0 BU(1). \qed\]
 \end{lemma}
@@ -199,14 +202,14 @@ BSU_E \arrow{r} \arrow[-,double]{d} & BU_E \arrow{r}{B\det} \arrow[-,double]{d} 
 \SDiv_0 \CP^\infty_E \arrow{r} & \Div_0 \CP^\infty_E \arrow{r}{\mathrm{sum}} & \CP^\infty_E,
 \end{tikzcd}
 \end{center}
-where the scheme ``$\SDiv_0 \CP^\infty$'' of ``special divisors'' consists of those divisors which vanish under the summation map.  However, where the comparison map $BU(1)_E \to BU_E$ has an identifiable universal property --- it presents $BU_E$ as the universal formal group on the pointed curve $BU(1)_E$ --- the description of $BSU_E$ as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor $([a] - [0])([b] - [0])$ classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(\L_1 - 1)(\L_2 - 1)_E} BSU_E \to BU_E = \Div_0 \CP^\infty_E.\]  Our final task today is to straighten this point out.
+where the scheme ``$\SDiv_0 \CP^\infty$'' of ``special divisors'' consists of those divisors which vanish under the summation map.  However, where the comparison map $BU(1)_E \to BU_E$ has an identifiable universal property --- it presents $BU_E$ as the universal formal group on the pointed curve $BU(1)_E$ --- the description of $BSU_E$ as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor $([a] - [0])([b] - [0])$ classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(\L_1 - 1)(\L_2 - 1)_E} BSU_E \to BU_E = \Div_0 \CP^\infty_E.\]  It would be wise of us to straighten this out before moving on.
 
 \begin{definition}\label{DefinitionOfC2G}
-If it exists, let $C_2 \G$ denote the symmetric square of $\Div_0 \G$, thought of as a module over $\Div \G$.  This scheme has the property that a formal group homomorphism $\phi\co C_2 \G \to H$ is equivalent data to a symmetric function $\psi\co \G \times \G \to H$ satisfying a rigidity condition, $\psi(x, 0) = 0$, and a $2$--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
+If it exists, let $C_2 \G$ denote the symmetric square of $\Div_0 \G$, thought of as a module over $\Div \G$.  This scheme has the property that a formal group homomorphism $\phi\co C_2 \G \to H$ is equivalent data to a symmetric function $\psi\co \G \times \G \to H$ satisfying a rigidity condition ($\psi(x, 0) = 0$) and a $2$--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
 \end{definition}
 
 \begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\citeme{This is Prop 3.2 of the AHS preprint or Prop 2.13 of Strickland's FSKS preprint}
-The scheme $\SDiv_0 \G$ is a model for $C_2 \G$.
+$\SDiv_0 \G$ is a model for $C_2 \G$.
 \end{theorem}
 \begin{proof}[Proof sketch]
 Consider the map
@@ -229,15 +232,32 @@ because \[\sigma(([a] - [0])([b] - [0])) = (a + b) - a - b + 0 = 0.\]  One can c
 This gives a compatible system of symmetric maps and hence bundles together to give a map $\tilde\phi\co\Div_0 \G \to H$ off of the colimit.  In general, this map is not a homomorphism, but it is a homomorphism when restricted to $\phi\co F \to \Div_0 \G \to H$.  Finally, one checks that any homomorphism $F \to H$ of formal groups restricting to the zero map $\G \times \G \to H$ was already the zero map, and this gives the desired identification of $F$ with the universal property of $C_2 \G$.
 \end{proof}
 
+In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an accessible splitting principle.  This not only makes the topology harder, but it also makes proving the existence of the symmetric cube $C_3 \G$ harder, as there is no model to work from.  Nonetheless, there is a $BU[6, \infty)$--analogue of \Cref{BUZTriumvirate}, \Cref{BUTriumvirate}, and \Cref{BSUTriumvirate}.  In order to prove it, since we don't have access to an equivalence between viewpoints (1) and (2), we will have to instead prove an equivalence between (2) and (3) directly.  Before embarking on this much harder case, we would be wise to investigate how such an equivalence works in the case of $MSU$.
 
 
+\citeme{Ando--Hopkins--Strickland 2.4.5}
+There is a map of schemes \[\Spec E_0 MSU \xrightarrow{g_2} C^2(\G; \sheaf I(0))\] which is a map of torsors compatible with the action maps
+\begin{center}
+\begin{tikzcd}
+\Spec E_0 MSU \times_{S_E} \Spec E_0 BSU \arrow{r} \arrow{d} & \Spec E_0 MSU \arrow{d} \\
+C^2(\G_E; \sheaf I(0)) \times C^2(\G_E; \sheaf O) \arrow{r} & C^2(\G_E; \sheaf I(0) \otimes_{\sheaf O} \sheaf O).
+\end{tikzcd}
+\end{center}
+The net effect is that this map $g_2$ is automatically an isomorphism.
 
+\todo{Write these elements of $C^2$ as sections of the bundle $\Theta^2 \L$.  Note that this construction is monoidal.}
 
 \begin{remark}
-In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an accessible splitting principle.  This not only makes the topology harder, but it also makes proving the existence of the symmetric cube $C_3 \G$ harder, as there is no model to work from.
+Even without access to $C_2 \G$, the scheme \[C^2(\G; \sheaf O) = \InternalHom{FormalSchemes}(C_2 \G, \Gm) = (C_2 \G)^\vee\] is directly accessible.  By picking a coordinate on $\G$, points of the middle scheme have presentations of power series satisfying particular identities, hence immediately exist as an affine scheme.
 \end{remark}
 
-\todo{Talk about $MSU$!  Talk about $\sheaf I(0)$ versus $\sheaf O$.  Also talk about how choosing a trivialization gives a comparison between the twisted thing and the untwisted thing.}
+\begin{remark}
+The map $MSU \to MU$ on affine schemes is given by
+\begin{align*}
+\Spec E_0 MU & \to \Spec E_0 MSU, \\
+f(x) & \mapsto \frac{f(x + y)}{f(x) \cdot f(y)}.
+\end{align*}
+\end{remark}
 
 
 
@@ -248,26 +268,16 @@ In the next interesting case of $\OS{kU}{6} = BU[6, \infty)$, there is not an ac
 
 
 
-Note that the Cartier dual object $C^2(\G, \Gm)$ is much easier to build: given a coordinate on $\G$, this has an obvious affine presentation.
+
+
+
 
 Identify the Thom sheaf of the universal bundle on $BSU$ as $C^2(\G; \sheaf I(0))$, together with its $C^2(\G, \Gm)$--torsor structure, and note that this automatically promotes the classifying map $MSU^E \to C^2(\G; \sheaf I(0))$ to an isomorphism. 
 
-Identify the restriction orientation $MSU \to MU \xrightarrow{s} E$ as $\delta(s_E)$
-
-\begin{remark}\todo[inline]{Actually work this out.}
+\begin{remark}\todo[color=red]{Actually work this out.}
 It should be possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?  Even if one can find an example of this, I think it will be somewhat artificial: the sequence of group schemes \[0 \to BSU_E \to BU_E \to BU(1)_E \to 0\] is short exact, \emph{and} it has a splitting on the level of formal schemes.  The splitting is what gives you the isomorphism on points $BSU_E(T) \times BU(1)_E(T) \cong BU_E(T)$.  On the other hand, because the splitting \emph{isn't} a map of formal groups, it doesn't survive to the Cartier dual short exact sequence \[0 \from BSU^E \from BU^E \from BU(1)^E \from 0,\] so this will come down to exhibiting a test ring $T = E_*$ for which $BU^E(T) \to BSU^E(T)$, despite being induced by an fppf-surjective map of sheaves, is not surjective on sections over $T$.  Of course, this comes down concretely to solving for a preimage under the map \[1 - g(x) \mapsto \frac{1 - g(x +_{\G} y)}{(1 - g(x))(1 - g(y))},\] which is more plodding but might offer insight into what sort of ring (and thus orientation) you're looking for.
 \end{remark}
 
-
-------
-
-\citeme{This is Section 2.4.5 of the published AHS} The map $\rho_k: P^k \to BU\<2k\>$ pulls back the tautological bundle over $BU\<2k\>$ to $V$, the external tensor product of the reduced tautological bundles.  Passing to Thom spectra gives a map $s_k: (P^k)^V \to MU\<2k\>$, and since $\ThomSheaf(\L) = \sheaf I(0)$ we get $\ThomSheaf{V} = \Theta^k(\sheaf I(0))$ on $P^k_E$.  The map $s_k$ is supposed to give a section of the pullback of $\Theta^k(\sheaf I(0))$ along the projection $MU\<2k\>^E \to S_E$.  More than that, $s_k$ is a $\Theta^k$--structure, since you can check those cocycle identities on $V$ itself, and so there's a classifying map \[MU\<2k\>^E \to C^k(\CP^\infty_E; \sheaf I(0)).\]  Since we calculated $BU\<2k\>^E \cong C^k(\CP^\infty_E, \Gm)$, we know that $C^k(\CP^\infty_E; \sheaf I(0))$ is a torsor for the group scheme $BU\<2k\>^E$.  So, we just need to check that the displaymode map is a map of torsors.  (Along the way, we should be able to check that the natural map $MU\<2k+2\> \to MU\<2k\>$ induces the map $C^k(\CP^\infty_E; \sheaf I(0)) \to C^{k+1}(\CP^\infty_E; \sheaf I(0))$.)  Matt's proof of this looks kind of vacuous\citeme{Theorem 2.50 of published AHS}, but I guess a key step is looking at the $V$ situation:
-\begin{center}
-\begin{tikzcd}
-T(V \to (\CP^\infty)^k) \arrow{r}{\Delta} \arrow{d} & T(V \to (\CP^\infty)^k) \sm (\CP^\infty)^k_+ \arrow{d} \\
-MU\<2k\> \arrow{r}{\Delta} & MU\<2k\> \sm BU\<2k\>_+.
-\end{tikzcd}
-\end{center}
 
 
 
