questions and typos
coop.tex
l438: clarification question
l489: silly complaint
sigma.tex
l27: added a little explanation
fixed various typos

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -435,7 +435,7 @@ Start with a formal line $V$ over a ground ring $A$, let $\G$ denote $V$ equippe
 A slightly different twist on this set-up leads to a new story entirely.  Recall that $\Omega^1_{V/A}$ forms the first level of the \textit{algebraic de Rham complex} $\Omega^*_{V/A}$.  The translation invariant differentials studied in the theory of the logarithm are those differentials so that the identity $\mu^* - \pi_1^* - \pi_2^* = 0$ holds \emph{at the chain level}.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the algebraic de Rham complex.  This condition begets a sub--$A$--module $D(\G/A)$ of $H^1_{dR}(\G/A)$ consisting of those $1$--forms which are cohomologically translation invariant.
 
 \begin{example}
-Let $A$ be a $\Z$--flat ring, let $\G$ be a formal group over $A$, and let $x$ be a coordinate on $\G$.  Set $K = A \otimes \Q$, so that $A \to K$ is an injection.  There is then a diagram of exact rows
+Let $A$ be a $\Z$--flat ring, let $\G$ be a formal group over $A$, and let $x$ be a coordinate on $\G$.  Set $K = A \otimes \Q$, so that $A \to K$ is an injection.  There is then a diagram of exact rows \todo{question: so here, the point is that you are restricting to integrals with no constant term, and that is the same as taking the quotient of the actual differentials, since the map $A\ps{x} -> \Omega^1_{A\ps{x}/A}$ is injective on that submodule? AY}
 \begin{center}
 \begin{tikzcd}[column sep=0.5em]
 0 \arrow{r} & \left\{\begin{array}{c}\text{integrals with} \\ \text{$A$ coefficients}\end{array}\right\} \arrow{r} \arrow[-,double]{d} & \{\text{all conceivable integrals}\} \arrow{r} \arrow[-,double]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[-,double]{d} & 0 \\
@@ -486,7 +486,7 @@ This is independent of choice of lift up to coherent isomorphism.  Given any oth
 
 Note that the module $M(\G_0)$ carries some natural operations:
 \begin{itemize}
-\item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module, with the action by $\ell$ corresponding to multiplication--by--$\ell$ on $\G_0$.
+\item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module, with the action by $\ell$ corresponding to multiplication--by--$\ell$ on $\G_0$. \todo{well, $\G_0$ is a formal group over $k$, so maybe it would be better to write $\ell \pmod{p}$ or action on $\G$? AY}
 \item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so it induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$.  That is, $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
 \item Verschiebung: The Verschiebung map is given by the mysterious formula \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
 \end{itemize}
