--- a/cooperations.tex
+++ b/cooperations.tex
@@ -798,7 +798,7 @@ Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, 
 Unsurprisingly, our analysis will rest on the bar spectral sequence \[\Tor^{K_* \OS{H}{q}}_{*, *}(K_*, K_*) \Rightarrow K_* \OS{H}{q+1}.\]  However, because $K$--theory is naturally a $2$--periodic theory, our method in \Cref{COableCoopnsII} of inducting on homological degree and working with a triangular corner of the spectral sequence will fail.  Instead, we will induct on the Eilenberg--Mac Lane index $q$ as in \Cref{UnstableSteenrodCoops}, and as such we will begin with analyzing the base case of $q = 0$ where we are interested in manually computing $K_* BA$ for a reasonable abelian group $A$.  Since $K$--theory has K\"unneth isomorphisms and $B(A_1 \times A_2) \simeq BA_1 \times BA_2$, it suffices to do the computation just for $A = C_{p^j}$.
 
 \begin{theorem}[{\cite[Theorem 5.7]{RavenelWilsonKthyOfEMSpaces}, \cite[Proposition 2.4.4]{HopkinsLurie}}]\label{KtheoryConvertsTorsionToTorsion}
-There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\]
+There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\] \todo{I'm a little confused about the objects in this definition.  Does the RHS mean take the scheme and then take p-torsion in the ring, then go back to the scheme?  And the LHS is K theory of the cofiber of multiplication by $p^j$? Maybe would help if this was slightly explained}
 \end{theorem}
 \begin{proof}
 Consider the diagram of spherical fibrations:\todo{Put in a pullback corner here.}
