--- a/hinfty.tex
+++ b/hinfty.tex
@@ -58,7 +58,7 @@ All of this rests, most importantly, on how a quotient of the Lubin--Tate univer
 
 
 
-\section{$E_\infty$ ring spectra and their contexts}
+\oldsection{$E_\infty$ ring spectra and their contexts}
 
 \todo[inline]{Mike has suggested looking at the paper \textit{The $K$--theory localization of an unstable sphere}, by Mahowald and Thompson.  In it, they manually construct a resolution of $S^{2n+1}$ suitable for computing the unstable Adams spectral sequence for $K$--theory, but the resolution that they build is also exactly what you would use to compute the mapping spectral sequence for $E_\infty(K^{S^{2n-1}}, K)$.  Additionally, because the unstable $K$--theoretic operations are exhausted by the power operations, these two spectral sequences converge to the same target.
 
@@ -71,7 +71,7 @@ This is also related to recent work of Behrens--Rezk on the Bousfield--Kuhn func
 
 
 
-\section{Subgroups and level structures}
+\oldsection{Subgroups and level structures}
 
 \todo[inline]{Something that these notes routinely fail to do is to lead into the algebraic geometry in a believable way.  ``Today we're going to talk about isogenies'' --- and then, lo' and behold, isogenies appear the next day in algebraic topology.  This book would read much better if it showed how these structures were guessed to exist to begin with.}
 
@@ -277,7 +277,7 @@ Talk with Nat:
 
 
 
-\section{The Drinfel'd ring and the universal level structure}
+\oldsection{The Drinfel'd ring and the universal level structure}
 
 Talk with Nat:
 \begin{itemize}
@@ -299,7 +299,7 @@ Talk with Nat:
 
 
 
-\section{Descending coordinates along level structures}
+\oldsection{Descending coordinates along level structures}
 
 % \begin{enumerate}
 % \item If $V = (1 - \L)$ is the reduced canonical line bundle over $\CP^\infty$, then using all the above we have \[\ThomSheaf{V} \cong \pi^* 0^* \sheaf I (0) \otimes \sheaf I(0)^{-1} = \Theta^1(\sheaf I(0)),\] where $\pi: \G_E \to S_E$ is the structural map and $\Theta^1$ is the usual.
@@ -424,7 +424,7 @@ The theorem is that these actually land in $E_n(X)$, as they definitely land in 
 
 
 
-\section{The moduli of subgroup divisors}
+\oldsection{The moduli of subgroup divisors}
 
 Following... the original? Following Nat?
 
@@ -476,7 +476,7 @@ where the product is now over all transitive Abelian $p$-subgroups. This implies
 
 
 
-\section{Interaction with $\Theta$--structures}
+\oldsection{Interaction with $\Theta$--structures}
 
 The Ando--Hopkins--Strickland result that the $\sigma$--orientation is an $H_\infty$--map
 
