--- a/quillen.tex
+++ b/quillen.tex
@@ -341,7 +341,7 @@ Let $E$ be a complex-orientable theory and let $V \to X$ be a complex vector bun
 \end{definition}
 
 This construction enjoys many properties already established.
-\begin{corollary}\citeme{Make backreferences.}
+\begin{corollary}\citeme{Make backreferences.} \todo{this corollary seems to be stated in the wrong order, as the first half uses virtual bundles which are defined in the second half. AY}
 If $f \co X \to Y$ is a map and $V$ is a virtual bundle over $Y$, then there is an isomorphism \[\ThomSheaf{f^* V} \cong (f_E)^* \ThomSheaf{V}.\]  Using \Cref{ThomSpacesAreMonoidal}, there is also is a canonical isomorphism \[\ThomSheaf{V \oplus W} = \ThomSheaf{V} \otimes \ThomSheaf{W}.\]  Finally, this property can then be used to extend the definition of $\ThomSheaf{V}$ to virtual bundles: \[\ThomSheaf{V - W} = \ThomSheaf{V} \otimes \ThomSheaf{W}^{-1}. \qed\]
 \end{corollary}
 
