reference to Callan’s remark

--- a/finite.tex
+++ b/finite.tex
@@ -9,6 +9,8 @@
 
 \todo{Do you need to come to grips with ind-coherent sheaves?}
 
+\todo{Callan wrote something at http://chat.stackexchange.com/transcript/message/28980387\#28980387 which addresses the unicity of the formal group attached to a local number field. I thought I drew an analogy to that somewhere in here, but now I can't find it. I would like to.}
+
 
 \section{The context of a spectrum}\label{StableContextLecture}
 \citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
