make Lecture 5.3 reflect reality

--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,8 @@
 
 \todo[inline]{http://tex.stackexchange.com/questions/53513/hyperref-token-not-allowed has information on how to make the PDF Bookmarks warnings go away. You can't use this until after you drop the date prefix macro.}
 
+\todo[inline]{Make sure you use either $\id$ or $1$ everywhere to denote the identity morphism.}
+
 
 
 
