reference for some stable comodule category stuff

--- a/finite.tex
+++ b/finite.tex
@@ -7,7 +7,7 @@
 
 \todo{still need to talk about closed and open subschemes, their basic properties}
 
-\todo{Do you need to come to grips with ind-coherent sheaves?}
+\todo{Do you need to come to grips with ind-coherent sheaves?  Hovey has a paper called \text{Homotopy theory of comodules over a Hopf algebroid} where he defines the stable category of a Hopf algebroid, which is sort of about this perspective --- making $BP_*$ into a compact object in a reasonable category of $BP_* BP$--comodules.}
 
 \todo{Callan wrote something at http://chat.stackexchange.com/transcript/message/28980387\#28980387 which addresses the unicity of the formal group attached to a local number field. I thought I drew an analogy to that somewhere in here, but now I can't find it. I would like to.}
 
